--- a/conferencias/demosal/presentacion_exp_w02.html
+++ b/conferencias/demosal/presentacion_exp_w02.html
@@ -28,7 +28,27 @@
       margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */ 
       vertical-align: middle;
     }
-  </style>
+    /* CSS for citations */
+    div.csl-bib-body { }
+    div.csl-entry {
+      clear: both;
+      margin-bottom: 0em;
+    }
+    .hanging-indent div.csl-entry {
+      margin-left:2em;
+      text-indent:-2em;
+    }
+    div.csl-left-margin {
+      min-width:2em;
+      float:left;
+    }
+    div.csl-right-inline {
+      margin-left:2em;
+      padding-left:1em;
+    }
+    div.csl-indent {
+      margin-left: 2em;
+    }  </style>
   <link rel="stylesheet" href="presentacion_exp_w02_files/libs/revealjs/dist/theme/quarto.css">
   <link href="presentacion_exp_w02_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="presentacion_exp_w02_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
@@ -375,11 +395,11 @@
 <h2><strong>Escuela, desigualdad y recompensas</strong></h2>
 <div class="highlight-last" style="font-size: 100%;">
 <ul>
-<li class="fragment"><p>Contexto escolar chileno caracterizado por amplia desigualdad, privatización y comodificación <span class="citation" data-cites="bellei_estudio_2013">[@bellei_estudio_2013]</span></p></li>
+<li class="fragment"><p>Contexto escolar chileno caracterizado por amplia desigualdad, privatización y comodificación <span class="citation" data-cites="bellei_estudio_2013">(<a href="#/referencias" role="doc-biblioref" onclick="">Bellei, 2013</a>)</span></p></li>
 <li class="fragment"><p>Falta de estudios sobre los criterios de justicia en la asignación de recompensas en el sistema educativo chileno por parte de las comunidades escolares</p></li>
 <li class="fragment"><p>Observar la manera en que estudiantes operan sus <strong>criterios de justicia</strong> al momento de <span class="black"><strong><em>distribuir recompensas en el contexto escolar</em></strong></span></p></li>
 <li class="fragment"><p>Recompensa a distribuir: <span class="red2"><strong><em>décimas</em></strong></span></p></li>
-<li class="fragment"><p>Experimento distribucional de encuestas <span class="citation" data-cites="gilgen_distributional_2020">[@gilgen_distributional_2020]</span></p></li>
+<li class="fragment"><p>Experimento distribucional de encuestas <span class="citation" data-cites="gilgen_distributional_2020">(<a href="#/referencias" role="doc-biblioref" onclick="">Gilgen, 2020</a>)</span></p></li>
 </ul>
 </div>
 </section>
@@ -387,11 +407,11 @@
 <h2><strong>Meritocracia</strong></h2>
 <div class="highlight-last" style="font-size: 100%;">
 <ul>
-<li class="fragment"><p><strong>Mérito</strong> = esfuerzo + talento <span class="citation" data-cites="young_rise_1958">[@young_rise_1958]</span></p></li>
-<li class="fragment"><p>Asociado a justificación de desigualdad al legitimar diferencias muchas veces asociadas a oportunidades <span class="citation" data-cites="mijs_unfulfillable_2016">[@mijs_unfulfillable_2016]</span></p></li>
+<li class="fragment"><p><strong>Mérito</strong> = esfuerzo + talento <span class="citation" data-cites="young_rise_1958">(<a href="#/referencias" role="doc-biblioref" onclick="">Young, 1958</a>)</span></p></li>
+<li class="fragment"><p>Asociado a justificación de desigualdad al legitimar diferencias muchas veces asociadas a oportunidades <span class="citation" data-cites="mijs_unfulfillable_2016">(<a href="#/referencias" role="doc-biblioref" onclick="">Mijs, 2016</a>)</span></p></li>
 <li class="fragment"><p><span class="black"><strong>Rol de la meritocracia en el principio de justicia</strong></span></p>
 <ul>
-<li class="fragment">Responde al <strong>principio de equidad</strong> en la distribución de las notas <span class="citation" data-cites="resh_sense_2010">[@resh_sense_2010]</span>, el cual se entiende como <strong>justo</strong> para dicha asignación cuando responde a criterios como el esfuerzo y el talento</li>
+<li class="fragment">Responde al <strong>principio de equidad</strong> en la distribución de las notas <span class="citation" data-cites="resh_sense_2010">(<a href="#/referencias" role="doc-biblioref" onclick="">Resh, 2010</a>)</span>, el cual se entiende como <strong>justo</strong> para dicha asignación cuando responde a criterios como el esfuerzo y el talento</li>
 </ul></li>
 </ul>
 </div>
@@ -645,6 +665,25 @@
 </div>
 </div>
 </section>
+<section id="section-9" class="slide level2">
+<h2></h2>
+<div class="columns">
+<div class="column" style="width:20%;">
+<p><img data-src="images/caso4.png"></p>
+</div><div class="column" style="width:80%;">
+<p><br></p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure>
+<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-20-1.png" style="width:95.0%"></p>
+</figure>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
 <section id="discusión-y-conclusiones" class="slide level2">
 <h2><strong>Discusión y conclusiones</strong></h2>
 <div class="highlight-last" style="font-size: 100%;">
@@ -663,11 +702,28 @@
 <li><strong>Github del proyecto:</strong> <a href="https://github.com/educacion-meritocracia" class="uri">https://github.com/educacion-meritocracia</a></li>
 </ul>
 </section>
-<section id="referencias" class="slide level2">
+<section id="referencias" class="slide level2 smaller scrollable">
 <h2>Referencias</h2>
 <div class="quarto-auto-generated-content">
 <div class="footer footer-default">
 
+</div>
+</div>
+<div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" data-line-spacing="2" role="list">
+<div id="ref-bellei_estudio_2013" class="csl-entry" role="listitem">
+Bellei, C. (2013). El Estudio de La Segregaci<span>ó</span>n Socioecon<span>ó</span>mica y Acad<span>é</span>mica de La Educaci<span>ó</span>n Chilena. <em>Estudios Pedag<span>ó</span>gicos (Valdivia)</em>, <em>39</em>(1), 325-345. <a href="https://doi.org/10.4067/S0718-07052013000100019">https://doi.org/10.4067/S0718-07052013000100019</a>
+</div>
+<div id="ref-gilgen_distributional_2020" class="csl-entry" role="listitem">
+Gilgen, S. (2020). The <span>Distributional Survey Experiment</span>. <a href="https://doi.org/10.31219/osf.io/d9uy4">https://doi.org/10.31219/osf.io/d9uy4</a>
+</div>
+<div id="ref-mijs_unfulfillable_2016" class="csl-entry" role="listitem">
+Mijs, J. (2016). The <span>Unfulfillable Promise</span> of <span>Meritocracy</span>: <span>Three Lessons</span> and <span>Their Implications</span> for <span>Justice</span> in <span>Education</span>. <em>Social Justice Research</em>, <em>29</em>(1), 14-34. <a href="https://doi.org/10.1007/s11211-014-0228-0">https://doi.org/10.1007/s11211-014-0228-0</a>
+</div>
+<div id="ref-resh_sense_2010" class="csl-entry" role="listitem">
+Resh, N. (2010). Sense of Justice about Grades in School: Is It Stratified like Academic Achievement? <em>Social Psychology of Education</em>, <em>13</em>(3), 313-329. <a href="https://doi.org/10.1007/s11218-010-9117-z">https://doi.org/10.1007/s11218-010-9117-z</a>
+</div>
+<div id="ref-young_rise_1958" class="csl-entry" role="listitem">
+Young, M. (1958). <em>The Rise of the Meritocracy</em>. New Brunswick, N.J., U.S.A: Transaction Publishers.
 </div>
 </div>
 </section></section>
