ajustes presentación + gráficos

--- a/conferencias/demosal/presentacion_exp_w02.html
+++ b/conferencias/demosal/presentacion_exp_w02.html
@@ -398,7 +398,6 @@
 <li class="fragment"><p>Contexto escolar chileno caracterizado por amplia desigualdad, privatización y comodificación <span class="citation" data-cites="bellei_estudio_2013">(<a href="#/referencias" role="doc-biblioref" onclick="">Bellei, 2013</a>)</span></p></li>
 <li class="fragment"><p>Falta de estudios sobre los criterios de justicia en la asignación de recompensas en el sistema educativo chileno por parte de las comunidades escolares</p></li>
 <li class="fragment"><p>Observar la manera en que estudiantes operan sus <strong>criterios de justicia</strong> al momento de <span class="black"><strong><em>distribuir recompensas en el contexto escolar</em></strong></span></p></li>
-<li class="fragment"><p>Recompensa a distribuir: <span class="red2"><strong><em>décimas</em></strong></span></p></li>
 <li class="fragment"><p>Experimento distribucional de encuestas <span class="citation" data-cites="gilgen_distributional_2020">(<a href="#/referencias" role="doc-biblioref" onclick="">Gilgen, 2020</a>)</span></p></li>
 </ul>
 </div>
@@ -439,21 +438,6 @@
 <section id="experimento-de-distribución-de-recompensas-décimas" class="title-slide slide level1 center" data-background-color="#5f5758">
 <h1>Experimento de <br> <em>distribución de recompensas</em> <br> (<em>décimas</em>)</h1>
 
-</section>
-<section id="sobre-el-experimento" class="slide level2">
-<h2><strong>Sobre el experimento</strong></h2>
-<div class="highlight-last" style="font-size: 100%;">
-<ul>
-<li class="fragment">Experimento de distribución de recompensas en el contexto escolar</li>
-<li class="fragment">Carácter <strong>exploratorio</strong></li>
-<li class="fragment">Recuadros que describen tipologías de estudiantes a partir de dos características:
-<ul>
-<li class="fragment"><span class="red2"><strong>Esfuerzo</strong></span></li>
-<li class="fragment"><span class="red2"><strong>Condiciones del hogar</strong></span></li>
-</ul></li>
-<li class="fragment">A partir de la nota, pueden <em><strong>aprobar</strong> y/o <strong>desaprobar</strong></em> a algún estudiante</li>
-</ul>
-</div>
 </section>
 <section id="planteamiento-del-experimento" class="slide level2">
 <h2>Planteamiento del experimento</h2>
@@ -677,6 +661,63 @@
 <div>
 <figure>
 <p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-20-1.png" style="width:95.0%"></p>
+</figure>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="section-10" class="slide level2">
+<h2></h2>
+<div class="columns">
+<div class="column" style="width:20%;">
+<p><img data-src="images/caso4.png"></p>
+</div><div class="column" style="width:80%;">
+<p><br></p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure>
+<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-23-1.png" style="width:95.0%"></p>
+</figure>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="section-11" class="slide level2">
+<h2></h2>
+<div class="columns">
+<div class="column" style="width:20%;">
+<p><img data-src="images/caso4.png"></p>
+</div><div class="column" style="width:80%;">
+<p><br></p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure>
+<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-25-1.png" style="width:95.0%"></p>
+</figure>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id="section-12" class="slide level2">
+<h2></h2>
+<div class="columns">
+<div class="column" style="width:20%;">
+<p><img data-src="images/caso4.png"></p>
+</div><div class="column" style="width:80%;">
+<p><br></p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure>
+<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-26-1.png" style="width:95.0%"></p>
 </figure>
 </div>
 </div>
