ajustes gráficos y conclusiones

--- a/conferencias/demosal/presentacion_exp_w02.html
+++ b/conferencias/demosal/presentacion_exp_w02.html
@@ -660,7 +660,7 @@
 <div class="cell-output-display">
 <div>
 <figure>
-<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-19-1.png" style="width:95.0%"></p>
+<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-20-1.png" style="width:95.0%"></p>
 </figure>
 </div>
 </div>
@@ -679,7 +679,7 @@
 <div class="cell-output-display">
 <div>
 <figure>
-<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-21-1.png" style="width:95.0%"></p>
+<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-22-1.png" style="width:95.0%"></p>
 </figure>
 </div>
 </div>
@@ -698,26 +698,7 @@
 <div class="cell-output-display">
 <div>
 <figure>
-<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-23-1.png" style="width:95.0%"></p>
-</figure>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-<section id="section-12" class="slide level2">
-<h2></h2>
-<div class="columns">
-<div class="column" style="width:20%;">
-<p><img data-src="images/caso4.png"></p>
-</div><div class="column" style="width:80%;">
-<p><br></p>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure>
-<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-25-1.png" style="width:95.0%"></p>
+<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-24-1.png" style="width:95.0%"></p>
 </figure>
 </div>
 </div>
@@ -731,8 +712,18 @@
 <ul>
 <li class="fragment"><p>Estudiantes tienden a aprobar a quien se <strong>esfuerza más</strong>, <em>independientemente</em> de sus condiciones del hogar.</p></li>
 <li class="fragment"><p>De todas formas, cuando los estudiantes se <strong>esfuerzan menos</strong> se tiende a recompensar más a quien tiene peores condiciones en su hogar.</p></li>
-<li class="fragment"><p>Estudiantes de educación media recompenzan aún más a quienes se esfuerzan, en comparación con estudiantes de educación básica. No se observan diferencias por el sexo de los estudiantes.</p></li>
-<li class="fragment"><p><em>Agenda de investigación en justicia escolar</em>: posibles implicancias que estos criterios de distribución pueden tener en sus propios resultados educativos y en la asignación de recompensas en la vida en general.</p></li>
+<li class="fragment"><p>Tanto estudiantes de educación media como hombres y con menor NSE recompenzan <em>aún más</em> a quienes se <strong>esfuerzan</strong>.</p></li>
+<li class="fragment"><p>Asimismo, estudiantes de colegios municipales de forma <em>unánime</em> <em>no recomepensan</em> a quien <strong>no se esfuerza</strong> y tiene condiciones <strong>cómodas</strong> para estudiar.</p></li>
+</ul>
+</div>
+</section>
+<section id="discusión-y-conclusiones-1" class="slide level2">
+<h2><strong>Discusión y conclusiones</strong></h2>
+<div class="highlight-last" style="font-size: 100%;">
+<ul>
+<li class="fragment"><p>Estudiantes que obtuvieron calificación 4 (muy cercano a <em>reprobar</em>) <em>recompensan unanimemente</em> a quien se <strong>esfuerza</strong> y tiene <strong>menos oportunidades</strong>.</p></li>
+<li class="fragment"><p>En general, el apoyo a estudiantes más meritorios se observa <em>aún más</em> cuando se consideran sus creencias relacionadas al mérito en la <strong>sociedad</strong> que en la <strong>escuela</strong>.</p></li>
+<li class="fragment"><p><strong>Proximamente</strong>: A la luz de estos resultados, se buscará identificar si las creencias meritocráticas de los/as estudiantes están relacionadas con dicha asignación.</p></li>
 </ul>
 </div>
 </section></section>
