--- a/conferencias/demosal/presentacion_exp_w02.html
+++ b/conferencias/demosal/presentacion_exp_w02.html
@@ -391,17 +391,6 @@
 </div>
 </div>
 </section>
-<section id="escuela-desigualdad-y-recompensas" class="slide level2">
-<h2><strong>Escuela, desigualdad y recompensas</strong></h2>
-<div class="highlight-last" style="font-size: 100%;">
-<ul>
-<li class="fragment"><p>Contexto escolar chileno caracterizado por amplia desigualdad, privatización y comodificación <span class="citation" data-cites="bellei_estudio_2013">(<a href="#/referencias" role="doc-biblioref" onclick="">Bellei, 2013</a>)</span></p></li>
-<li class="fragment"><p>Falta de estudios sobre los criterios de justicia en la asignación de recompensas en el sistema educativo chileno por parte de las comunidades escolares</p></li>
-<li class="fragment"><p>Observar la manera en que estudiantes operan sus <strong>criterios de justicia</strong> al momento de <span class="black"><strong><em>distribuir recompensas en el contexto escolar</em></strong></span></p></li>
-<li class="fragment"><p>Experimento distribucional de encuestas <span class="citation" data-cites="gilgen_distributional_2020">(<a href="#/referencias" role="doc-biblioref" onclick="">Gilgen, 2020</a>)</span></p></li>
-</ul>
-</div>
-</section>
 <section id="meritocracia" class="slide level2">
 <h2><strong>Meritocracia</strong></h2>
 <div class="highlight-last" style="font-size: 100%;">
@@ -412,6 +401,17 @@
 <ul>
 <li class="fragment">Responde al <strong>principio de equidad</strong> en la distribución de las notas <span class="citation" data-cites="resh_sense_2010">(<a href="#/referencias" role="doc-biblioref" onclick="">Resh, 2010</a>)</span>, el cual se entiende como <strong>justo</strong> para dicha asignación cuando responde a criterios como el esfuerzo y el talento</li>
 </ul></li>
+</ul>
+</div>
+</section>
+<section id="escuela-desigualdad-y-recompensas" class="slide level2">
+<h2><strong>Escuela, desigualdad y recompensas</strong></h2>
+<div class="highlight-last" style="font-size: 100%;">
+<ul>
+<li class="fragment"><p>Contexto escolar chileno caracterizado por amplia desigualdad, privatización y comodificación <span class="citation" data-cites="bellei_estudio_2013">(<a href="#/referencias" role="doc-biblioref" onclick="">Bellei, 2013</a>)</span></p></li>
+<li class="fragment"><p>Falta de estudios sobre los criterios de justicia en la asignación de recompensas en el sistema educativo chileno por parte de las comunidades escolares</p></li>
+<li class="fragment"><p>Observar la manera en que estudiantes operan sus <strong>criterios de justicia</strong> al momento de <span class="black"><strong><em>distribuir recompensas (notas/calificaciones) en el contexto escolar</em></strong></span></p></li>
+<li class="fragment"><p>Experimento distribucional de encuestas <span class="citation" data-cites="gilgen_distributional_2020">(<a href="#/referencias" role="doc-biblioref" onclick="">Gilgen, 2020</a>)</span></p></li>
 </ul>
 </div>
 </section></section>
@@ -668,44 +668,6 @@
 </div>
 </div>
 </section>
-<section id="section-10" class="slide level2">
-<h2></h2>
-<div class="columns">
-<div class="column" style="width:20%;">
-<p><img data-src="images/caso4.png"></p>
-</div><div class="column" style="width:80%;">
-<p><br></p>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure>
-<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-22-1.png" style="width:95.0%"></p>
-</figure>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-<section id="section-11" class="slide level2">
-<h2></h2>
-<div class="columns">
-<div class="column" style="width:20%;">
-<p><img data-src="images/caso4.png"></p>
-</div><div class="column" style="width:80%;">
-<p><br></p>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure>
-<p><img data-src="presentacion_exp_w02_files/figure-revealjs/unnamed-chunk-24-1.png" style="width:95.0%"></p>
-</figure>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
 <section id="discusión-y-conclusiones" class="slide level2">
 <h2><strong>Discusión y conclusiones</strong></h2>
 <div class="highlight-last" style="font-size: 100%;">
@@ -723,7 +685,8 @@
 <ul>
 <li class="fragment"><p>Estudiantes que obtuvieron calificación 4 (muy cercano a <em>reprobar</em>) <em>recompensan unanimemente</em> a quien se <strong>esfuerza</strong> y tiene <strong>menos oportunidades</strong>.</p></li>
 <li class="fragment"><p>En general, el apoyo a estudiantes más meritorios se observa <em>aún más</em> cuando se consideran sus creencias relacionadas al mérito en la <strong>sociedad</strong> que en la <strong>escuela</strong>.</p></li>
-<li class="fragment"><p><strong>Proximamente</strong>: A la luz de estos resultados, se buscará identificar si las creencias meritocráticas de los/as estudiantes están relacionadas con dicha asignación.</p></li>
+<li class="fragment"><p>Se observa una <strong>asginación consensual</strong> de las recompensas, premiando el esfuerzo con una baja consideración a las oportunidades estructurales.</p></li>
+<li class="fragment"><p><strong>Proximamente</strong>: A la luz de estos resultados, se buscará profundizar si las creencias meritocráticas de los/as estudiantes están relacionadas con dicha asignación.</p></li>
 </ul>
 </div>
 </section></section>
